cmake_minimum_required (VERSION 2.6)
project (RGB2H264)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(INC_DIR ../../include)  
set(LINK_DIR ../../lib)  
set(DIR_SRCS .)
include_directories(${INC_DIR})
link_directories(${LINK_DIR})
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
add_executable(RGB2H264 ${DIR_SRCS})
TARGET_LINK_LIBRARIES(RGB2H264 x264 avcodec avdevice avutil swscale)
