cmake_minimum_required (VERSION 2.6)
project (RGB2H264)
add_compile_options(-std=c++11)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(INC_DIR ../../../include)  
set(DIR_SRCS .)
include_directories(${INC_DIR})
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../lib)
AUX_SOURCE_DIRECTORY(. CMAKE_CURRENT_SOURCE_DIR)
add_executable(RGB2H264 ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(RGB2H264 x264 avcodec avdevice avutil swscale swresample)
