cmake_minimum_required (VERSION 2.6)
project (rtp_server)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(INC_DIR ../../../include ../../../include/jrtplib)  
set(DIR_SRCS .)
include_directories(${INC_DIR})
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../lib)
AUX_SOURCE_DIRECTORY(. CMAKE_CURRENT_SOURCE_DIR)
add_executable(rtp_server ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(rtp_server jrtp)
